[package]
name = "wot-test"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
eventsource-stream = "0.2.3"
futures-util = "0.3.25"
http-api-problem = "0.55.0"
once_cell = "1.16.0"
reqwest = { version = "0.11.12", features = ["json"] }
reqwest-eventsource = "0.4.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
stable-eyre = "0.2.2"
time = { version = "0.3.16", features = ["serde-well-known"] }
tokio = { version = "1.21.2", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.11"
